# research2026

./: .gitattributes  .gitignore  README.md  pyproject.toml
01-nn/: README.md  pyproject.toml
01-nn/notebooks/: AlexNet CIFAR-10.ipynb  Digits MNIST.ipynb  Fashion MNIST.ipynb  LeNet CIFAR-10.ipynb
01-nn/notebooks/models/: alexnet_cifar10.keras  alexnet_cifar10.weights.h5  lenet_cifar10.keras  lenet_cifar10.weights.h5
02-frameworks/: README.md  pyproject.toml
02-frameworks/notebooks/: tutorial - colors.ipynb  tutorial - numpy.ipynb  tutorial - pytorch.ipynb
projects/interpreter/: pyproject.toml
projects/interpreter/notebooks/: 01.  Starter.ipynb
projects/memagents/: .gitignore  README.md  pyproject.toml  pytest.ini  run_mem0_demo.sh
projects/memagents/asdrp/agent/: base.py  mem0_agent.py  reductive_agent.py  simple_agent.py  summary_agent.py
projects/memagents/notebooks/: Agentic Memory.ipynb
projects/memagents/tests/agent/: test_mem0_agent.py
projects/memagents/tests/asdrp/agent/: test_base_agent.py  test_simple_agent.py
