[project]
name = "frames"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "torch>=2.10.0",
    "torchvision>=0.20.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "tqdm>=4.67.1",
    "scikit-learn>=1.6.1",
    "opencv-python>=4.13.0.92",
    "timm>=1.0.24",
]
