[project]
name = "interpreter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
]
